--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,14 @@ logging:
           descriptor:
             sql:
               BasicBinder: TRACE
+
+server:
+  port: 8080
+
+feign:
+  client:
+    config:
+      default: # @FeignClient 에서 name 값, 전역으로 설정하려면 default
+        connectTimeout: 5000
+        readTimeout: 2000
+        loggerLevel: FULL
